# ddlm

./: .gitignore  Final_Diffusion_LLM_from_scratch_TinyStories.ipynb  README.md  classic_render.py  config.py  data.py  deploy_and_run.sh  deploy_fabric.py  diffusion_utils.py  generate.py  main.py  model.py  pyproject.toml  render.py  train.py
docs/: DDLM_code_explnation.md
nbs/: Final_Diffusion_LLM_from_scratch_TinyStories.ipynb
scripts/: sweep.py
src/generation/: generate.py
src/models/: model.py
src/training/: train.py
src/utils/: diffusion_utils.py
