[project]
name = "ddlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "datasets",
    "tokenizers",
    "accelerate",
    "tqdm",
    "numpy",
    "einops",
    "imageio",
    "pillow",
    "transformers",
    "hf_transfer",
    "click",
    "fabric",
    "matplotlib",
    "ruff>=0.15.0",
]